force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <description>Records system-generated alerts for waste collection issues.</description>
    <label>Alert</label>
    <nameField>
        <displayFormat>ALT-{0000}</displayFormat>
        <label>Alerts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>