force-app/main/default/objects/Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <description>Type of alert.</description>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed Pickup</fullName>
            </value>
            <value>
                <fullName>Dumping Detected</fullName>
            </value>
            <value>
                <fullName>Route Deviation</fullName>
            </value>
            <value>
                <fullName>Vehicle Breakdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>