force-app/main/default/objects/Alert__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>Timestamp of the alert.</description>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>