force-app/main/default/objects/Alert__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related route.</description>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Alerts</relationshipLabel>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>