force-app/main/default/objects/Alert__c/fields/Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Sent_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>