force-app/main/default/objects/Alert__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vehicle involved in the alert.</description>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Alerts</relationshipLabel>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>